--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,24 +5,24 @@ server.port=8082
 
 spring.mail.host=smtp.office365.com
 spring.mail.port=587
-spring.mail.username=abdallah_hassoun@efinance.com.eg
-spring.mail.password=Abdo@1234
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail_protocol=smtp
 mail_debug=true
-from_mail=abdallah_hassoun@efinance.com.eg
+from_mail=
 #############################
 
 ##########################################################
 ## Cross Origin Parameters
 settings.cors_origin.public=http://localhost:4200
-settings.cors_origin.business=http://ssp-business-portal-service-ssp-dev.apps.test.efinance.com.eg,http://ssp-business-portal-service-ssp-qc.apps.test.efinance.com.eg,https://businessportaluat.efinance.com.eg
+settings.cors_origin.business=
 ##########################################################
 ### Cross Origin Parameters
-#settings.cors_origin.publicQc=http://ssp-public-portal-service-ssp-qc.apps.test.efinance.com.eg
-#settings.cors_origin.businessQc=http://ssp-business-portal-service-ssp-qc.apps.test.efinance.com.eg
+#settings.cors_origin.publicQc=
+#settings.cors_origin.businessQc=
 ###########################################################
 ### Cross Origin Parameters
-#settings.cors_origin.publicUat=https://pubportaluat.efinance.com.eg
-#settings.cors_origin.businessUat=https://businessportaluat.efinance.com.eg
+#settings.cors_origin.publicUat=
+#settings.cors_origin.businessUat=
